Added open graph image

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Precious Oben | Data Analyst & Engineer</title>
+
+    <meta property="og:image" content="https://precious-oben.vercel.app/og-image.png" />
+    <meta property="og:title" content="Precious Oben | Data Analyst & Engineer" />
+    <meta property="og:description" content="I build end-to-end pipelines, automate reporting, and turn fragmented data into decisions that drive real business outcomes." />
+    <meta property="og:url" content="https://precious-oben.vercel.app" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
